--- a/123.md
+++ b/123.md
@@ -1,4 +1,19 @@
 Links not related to homeschooling, but instead for raising good humans.
 
+Love and Logic
+  https://www.loveandlogic.com
+
+PJ Library
+  https://pjlibrary.org/home
+
+Dolly Parton's Imagination Library
+  https://imaginationlibrary.com/
+  
 Paul Castle Books
   https://paulcastlestudio.com/
+
+The 5 Love Languages
+  https://5lovelanguages.com/
+
+Sharing Love Abundantly in Special Needs Families
+  https://5lovelanguages.com/store/sharing-love-abundantly-in-special-needs-families
